FreeCodeCamp/Wikipedia_Viewer/wiki.css
html, body {
  height: 100%;
  width: 100%;
  font-family: "Segoe UI", Segoe, Tahoma, Geneva, sans-serif;
/*  font-size: 18px;*/
  line-height: 1.4em;
  background-color: #874C62;
}

.table_container {
  display: table;
  position: absolute;
  height: 100%;
  width: 100%;
}

.cont {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
  /*padding: 20px;*/
}

.content {
  padding: 40px;
}

li {
  background-color: #F7F5E6;
  list-style-type: none;
  margin-bottom: 10px;
  padding: 20px 20px 0px 20px;
  border-radius: 8px;
}

li:hover {
  border-left: 5px solid #3CC47C;
  margin-left: -5px;
}


a, a:visited, a:hover, a:active, a:-webkit-any-link {
  text-decoration: none;
  color: black;
}

input {
  transition-property: width, border-radius, background, box-shadow;
  transition-duration: 0.6s;
  width: 40px;
  height: 40px;
  border-radius: 20px;
  border: none;
  cursor: pointer;
  background: #3CC47C;
}

input:hover {
  color: #fff;
  background: #c8c8c8;
  box-shadow: 0 0 0 5px #3d4752;
}

input:focus {
  transition-property: width, border-radius, background;
  transition-duration: 0.6s;
  border: none;
  outline: none;
  box-shadow: none;
  padding: 1px 30px 1px 15px;
  cursor: text;
  width: 300px;
  border-radius: auto;
  background: #F7F5E6;
  color: black;
}

input:not(:focus) {
  text-indent:-5000px;
}

.search-icon {
  position: relative;
  left: -30px;
  color: #fff;
  cursor: pointer;
}

input:focus  + label > .search-icon {
  color: #3CC47C;
}

.text {
  color: #F7F5E6;
  padding: 20px;
}

.btn {
  font-size: 18px;
  background-color: #3CC47C;
  border: #2FA063;
  color: #fff;
}

.btn:focus, .btn:hover, .btn:active, .btn:visited {
  outline-style: none;
  background-color: #2FA063;
  color: #fff;
}

#random-btn {
  margin: 0 0 0 25px;
}



#form {
  display: inline;
/*  padding: 20px;
  height: 40px;
  width: 40px;*/
}

